--- a/public/admin.html
+++ b/public/admin.html
@@ -218,6 +218,235 @@
 
         <h2>إحصائيات</h2>
         <div class="stats-section" id="stats-section"></div>
+
+
+<!-- قوائم الطلاب كاملة - 5 فصول -->
+<div class="class-card">
+    <h3>فصل 1/2</h3>
+    <div class="table-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th>م</th>
+                    <th>اسم الطالب</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td><td>إبراهيم عبدالحميد إبراهيم يونس</td></tr>
+                <tr><td>2</td><td>أحمد الطيب أحمد عبدالعزيز محمد</td></tr>
+                <tr><td>3</td><td>أحمد جابر أحمد أمين أبوبكر</td></tr>
+                <tr><td>4</td><td>أحمد حجاج أحمد محمد محمد</td></tr>
+                <tr><td>5</td><td>أحمد سعدي سيد علي</td></tr>
+                <tr><td>6</td><td>أحمد محمد سلطان حسن</td></tr>
+                <tr><td>7</td><td>أحمد محمد عويس يوسف</td></tr>
+                <tr><td>8</td><td>أحمد موسى أحمد حسين حسن</td></tr>
+                <tr><td>9</td><td>أدهم محمد حسين أبوالوفا مكي</td></tr>
+                <tr><td>10</td><td>أنس مالك حسن يوسف</td></tr>
+                <tr><td>11</td><td>بولا صبحي جادالرب لوندي</td></tr>
+                <tr><td>12</td><td>حذيفة رمضان عبدالحميد حامد إبراهيم</td></tr>
+                <tr><td>13</td><td>الحسن علي محمد علي مصطفى</td></tr>
+                <tr><td>14</td><td>حسن محمود يوسف شرقاوي قناوي</td></tr>
+                <tr><td>15</td><td>حمزة يوسف شعبان عبدالنعيم موسى</td></tr>
+                <tr><td>16</td><td>خالد أحمد أمين سيد يوسف</td></tr>
+                <tr><td>17</td><td>خالد علي عبدالرحيم عبدالقادر أحمد</td></tr>
+                <tr><td>18</td><td>روماني عبده عزيز عبدالملك خليل</td></tr>
+                <tr><td>19</td><td>زياد وائل محمد مهران</td></tr>
+                <tr><td>20</td><td>سيف محمود رمضان أحمد</td></tr>
+                <tr><td>21</td><td>صالح حسن السيد أحمد</td></tr>
+                <tr><td>22</td><td>عبدالرحمن كامل محمد أحمد حسن</td></tr>
+                <tr><td>23</td><td>عبدالرحمن محمود أحمد يونس</td></tr>
+                <tr><td>24</td><td>عبدالله أحمد بدوي عبدالسميع</td></tr>
+                <tr><td>25</td><td>عبدالله أحمد عبدالجواد فهمي</td></tr>
+                <tr><td>26</td><td>عبدالله مصطفى عبدالسميع متولي</td></tr>
+                <tr><td>27</td><td>علي محمد عبدالدايم علي أحمد</td></tr>
+                <tr><td>28</td><td>علي منصور إبراهيم علي عبيد</td></tr>
+                <tr><td>29</td><td>عماد الدين محمد عربي إبراهيم</td></tr>
+                <tr><td>30</td><td>محمود عبد الرحيم محمود حسن</td></tr>
+                <tr><td>31</td><td>مصعب فراج سيد محمد</td></tr>
+                <tr><td>32</td><td>معز عصمت عادل أحمد</td></tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div class="class-card">
+    <h3>فصل 2/2</h3>
+    <div class="table-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th>م</th>
+                    <th>اسم الطالب</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td><td>أسامة عبدالمحسوب يوسف ضوى</td></tr>
+                <tr><td>2</td><td>عبدالرحمن أشرف سيد أحمد</td></tr>
+                <tr><td>3</td><td>عبدالرحمن جابر عبدالقادر أحمد</td></tr>
+                <tr><td>4</td><td>عمرو خالد موسى أحمد</td></tr>
+                <tr><td>5</td><td>عمرو سيد أبو المجد أحمد</td></tr>
+                <tr><td>6</td><td>كمال محمود كمال على عبدالعزيز</td></tr>
+                <tr><td>7</td><td>كيرلس أبهاب عياد سويحة</td></tr>
+                <tr><td>8</td><td>كيرلس متى نبيل نصري عبده</td></tr>
+                <tr><td>9</td><td>ماجد عبدالكريم محمد عبدالراضي</td></tr>
+                <tr><td>10</td><td>مازن حسين عبدالعاطي علي محمد</td></tr>
+                <tr><td>11</td><td>مازن خالد محمد محمد علي</td></tr>
+                <tr><td>12</td><td>محمد إبراهيم بدري محجوب أحمد</td></tr>
+                <tr><td>13</td><td>محمد إبراهيم عبدالوهاب أحمد</td></tr>
+                <tr><td>14</td><td>محمد أحمد السابح علي محمد</td></tr>
+                <tr><td>15</td><td>محمد خالد حسان أحمد</td></tr>
+                <tr><td>16</td><td>محمد صالح عبد السميع متولي حسين</td></tr>
+                <tr><td>17</td><td>محمد صبري عبدالوهاب عبدالراضي</td></tr>
+                <tr><td>18</td><td>محمد عاشور أحمد خليل محمد</td></tr>
+                <tr><td>19</td><td>محمد عاطف عبدالله محمد سليمان</td></tr>
+                <tr><td>20</td><td>محمد عامر قناوي عامر</td></tr>
+                <tr><td>21</td><td>محمد عثمان بدر عبدالوهاب</td></tr>
+                <tr><td>22</td><td>محمد علي محمد حسان</td></tr>
+                <tr><td>23</td><td>محمد محمد صادق محمد</td></tr>
+                <tr><td>24</td><td>محمود حسنين عمر صالح محمد</td></tr>
+                <tr><td>25</td><td>محمود خليل عبدالعزيز خليل صادق</td></tr>
+                <tr><td>26</td><td>معاذ أحمد أبوزيد بدوي</td></tr>
+                <tr><td>27</td><td>معاذ محمود حساني محمد</td></tr>
+                <tr><td>28</td><td>مينا نبيل كامل عبدالمسيح</td></tr>
+                <tr><td>29</td><td>يحيى علي عبدالنعيم علي</td></tr>
+                <tr><td>30</td><td>يوسف عبدالرحمن أحمد مصطفى صالح</td></tr>
+                <tr><td>31</td><td>يوسف عماد سامي قسطندي</td></tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div class="class-card">
+    <h3>فصل 3/2</h3>
+    <div class="table-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th>م</th>
+                    <th>اسم الطالب</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td><td>إسراء علي محمد علي</td></tr>
+                <tr><td>2</td><td>إسراء محمود عبد السلام عباس</td></tr>
+                <tr><td>3</td><td>أسماء صغير جمعة حامد</td></tr>
+                <tr><td>4</td><td>أشرقت عبد الفتاح ذكي عبد السميع</td></tr>
+                <tr><td>5</td><td>الزهراء مصطفى عبد الرزاق</td></tr>
+                <tr><td>6</td><td>الشيماء محمد عبد الرحمن محمد</td></tr>
+                <tr><td>7</td><td>آلاء حمدي محمد كرم</td></tr>
+                <tr><td>8</td><td>آلاء موسى محمد عادلي</td></tr>
+                <tr><td>9</td><td>أمنية حسانين عزب حسانين</td></tr>
+                <tr><td>10</td><td>أنصاف محمد أحمد جاد</td></tr>
+                <tr><td>11</td><td>آية محمد النوبي السمان</td></tr>
+                <tr><td>12</td><td>إيرين لطفي نسيم سمعان</td></tr>
+                <tr><td>13</td><td>إيمان سعد رشيدي أبو الوفا</td></tr>
+                <tr><td>14</td><td>آية عادل النداي جهلان</td></tr>
+                <tr><td>15</td><td>بوسي أحمد محمد أحمد</td></tr>
+                <tr><td>16</td><td>تسنيم علي أحمد محمود</td></tr>
+                <tr><td>17</td><td>تسنيم منتصر عبد الحميد محمد</td></tr>
+                <tr><td>18</td><td>جنة فيصل عبد المنعم بحر</td></tr>
+                <tr><td>19</td><td>جنة حسني خليل أحمد</td></tr>
+                <tr><td>20</td><td>جهاد هاني عبد الجواد مصطفى</td></tr>
+                <tr><td>21</td><td>حبيبة محمد أحمد حسن</td></tr>
+                <tr><td>22</td><td>حسناء علي سعدي حسن</td></tr>
+                <tr><td>23</td><td>حنين عبدالحسيب أحمد</td></tr>
+                <tr><td>24</td><td>دعاء الحسن محمد مدني</td></tr>
+                <tr><td>25</td><td>رحاب رمضان محمد علي</td></tr>
+                <tr><td>26</td><td>رؤى أحمد عبد الرحيم سيد</td></tr>
+                <tr><td>27</td><td>ريتاج محمد الطاهر مشهد عبد المجيد</td></tr>
+                <tr><td>28</td><td>ريفان أحمد محمد كمال</td></tr>
+                <tr><td>29</td><td>زينب عبد الرحيم محمد محمود</td></tr>
+                <tr><td>30</td><td>زينب عبد العزيز عبد السميع</td></tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div class="class-card">
+    <h3>فصل 4/2</h3>
+    <div class="table-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th>م</th>
+                    <th>اسم الطالب</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td><td>جمانة محمد حلمي رجب</td></tr>
+                <tr><td>2</td><td>سلمى أحمد السيد أحمد النوبي</td></tr>
+                <tr><td>3</td><td>شمس حسين رمضان أحمد</td></tr>
+                <tr><td>4</td><td>شيماء عبد المنعم السابح علي</td></tr>
+                <tr><td>5</td><td>صفاء فراج محمد النجار</td></tr>
+                <tr><td>6</td><td>ضحى بدوي حسن محمود</td></tr>
+                <tr><td>7</td><td>ضحى حسين زكي محمد</td></tr>
+                <tr><td>8</td><td>فاطمة أحمد حسان أحمد</td></tr>
+                <tr><td>9</td><td>فاطمة شعبان محمد السيد</td></tr>
+                <tr><td>10</td><td>فاطمة مرتضى عبد القادر</td></tr>
+                <tr><td>11</td><td>فرحة سالم إبراهيم سالم</td></tr>
+                <tr><td>12</td><td>لمياء أحمد محمد عبد الراضي</td></tr>
+                <tr><td>13</td><td>مرفات مصطفى علي يوسف</td></tr>
+                <tr><td>14</td><td>مروة أحمد حامد قناوي</td></tr>
+                <tr><td>15</td><td>مروة حسن أحمد فرشوطي</td></tr>
+                <tr><td>16</td><td>مروة خالد محمد البسطاوي</td></tr>
+                <tr><td>17</td><td>مريم عبدالرحمن محمد إبراهيم</td></tr>
+                <tr><td>18</td><td>مريم محمد عبد المحسن محمود</td></tr>
+                <tr><td>19</td><td>مريم محمود عبد الحفيظ أحمد</td></tr>
+                <tr><td>20</td><td>ملك محمد قرقار محمد</td></tr>
+                <tr><td>21</td><td>منه منصور أبو الحجاج السيد</td></tr>
+                <tr><td>22</td><td>ميرهان محمود محمد زكي</td></tr>
+                <tr><td>23</td><td>نوال عصام أحمد محمد</td></tr>
+                <tr><td>24</td><td>نورهان رفاعي عبد الحميد توفيق</td></tr>
+                <tr><td>25</td><td>هاجر حجاج سيد النوبي</td></tr>
+                <tr><td>26</td><td>هاجر قرني خيري عرفات</td></tr>
+                <tr><td>27</td><td>هند خليفة محمود علي</td></tr>
+                <tr><td>28</td><td>ياسمين أحمد يوسف عثمان</td></tr>
+                <tr><td>29</td><td>ياسمين رجب عياد مرعزي</td></tr>
+                <tr><td>30</td><td>ياسمين منصور عبيد أحمد</td></tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div class="class-card">
+    <h3>فصل 1/1</h3>
+    <div class="table-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th>م</th>
+                    <th>اسم الطالب</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td><td>محمد أحمد محمد أبوالمجد</td></tr>
+                <tr><td>2</td><td>أسامة محمد فكري حسين</td></tr>
+                <tr><td>3</td><td>ذياد محمد خيري الراوي</td></tr>
+                <tr><td>4</td><td>محمد أحمد محمد أحمد</td></tr>
+                <tr><td>5</td><td>عبد الله محمد جمعة حسين ملك</td></tr>
+                <tr><td>6</td><td>عبد الرحمن حسن أحمد حسن</td></tr>
+                <tr><td>7</td><td>أحمد سعدي عباس عبد الراضي</td></tr>
+                <tr><td>8</td><td>أحمد حسن جلال إسماعيل</td></tr>
+                <tr><td>9</td><td>حمزة إدريس محمد قاسم</td></tr>
+                <tr><td>10</td><td>عبدالرحمن طارق حمدان الضوي</td></tr>
+                <tr><td>11</td><td>دليا عبد السلام بدري محمد</td></tr>
+                <tr><td>12</td><td>سارة عامر عبدالراضي صديق</td></tr>
+                <tr><td>13</td><td>شاهندا صابر سيد سعدي أحمد</td></tr>
+                <tr><td>14</td><td>فاطمة خيري عبدالله محمد</td></tr>
+                <tr><td>15</td><td>ملك تيسير محمد الزاهر</td></tr>
+                <tr><td>16</td><td>رضوى محمد فتحي عبدالحميد</td></tr>
+                <tr><td>17</td><td>نوران أحمد رشدي قناوي</td></tr>
+                <tr><td>18</td><td>هاجر عبد النعيم رمضان بشاري</td></tr>
+                <tr><td>19</td><td>زينب محمد عبد الدايم محمد</td></tr>
+                <tr><td>20</td><td>ملك محمد أحمد محمد</td></tr>
+                <tr><td>21</td><td>آية سعد الله عبد الله علي</td></tr>
+                <tr><td>22</td><td>منة أحمد عبد الفتاح أحمد</td></tr>
+                <tr><td>23</td><td>زمزم مصطفى فؤاد محمود</td></tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
        <!-- قسم إنشاء الاختبارات الإلكترونية -->
 <section class="exams-section">
     <h2>إنشاء اختبار إلكتروني</h2>
