--- a/public/admin.html
+++ b/public/admin.html
@@ -242,15 +242,20 @@
         <div class="class-card">
             <h3 id="class-title">فصل ...</h3>
             <div class="table-wrapper">
-                <table id="students-table">
-                    <thead>
-                        <tr>
-                            <th>م</th>
-                            <th>اسم الطالب</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
+                <div class="class-card">
+    <h3 id="class-title">فصل ...</h3>
+    <div class="table-wrapper">
+        <table id="students-table" class="students-list-table">
+            <thead>
+                <tr>
+                    <th>م</th>
+                    <th>اسم الطالب</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+</div>
             </div>
         </div>
     </div>
